# TryOutC-C-

./: .gitignore  README.md  sample-explaination.c
Cpp23/: CMakeLists.txt  Debug.cmake
Cpp23/src/: helper.cpp  helper.h  main.cpp
Cpp23/src/ClassStruct/: Class.cpp  Class.h  Struct.cpp  Struct.h
Cpp23/src/Day1/: day1.cpp  day1practice.cpp
Cpp23/src/Pointers/: Pointers.cpp  Pointers.h
Cpp23/src/RAII/: Day3.cpp
Cpp23/src/Reference&Pointeres/: day2.cpp
Cpp23/src/Vector/: vector.cpp  vector.h
CppFundamentals/Builds/multi-File/Class/debug/: Class
CppFundamentals/Builds/multi-File/Class/release/: Class
CppFundamentals/Builds/multi-File/Struct/debug/: Struct
CppFundamentals/Builds/multi-File/Struct/release/: Struct
CppFundamentals/Builds/single-File/: arrays  iostream  loops  main  map  pointers  references  sets  smart_pointers  string  unordered_map  unordered_set
CppFundamentals/Notes/: C++ Debugging practices.md  C++ Optimization Flags (`-O`) — Practi.md  C++ maps arrays.md  C++ pointers.md
CppFundamentals/src/multi-File/Class/: CMakeLists.txt  class.cpp  class.hpp  main.cpp
CppFundamentals/src/multi-File/Struct/: CMakeLists.txt  main.cpp  point.hpp
CppFundamentals/src/single-File/: arrays.cpp  iostream.cpp  loops.cpp  main.cpp  map.cpp  pointers.cpp  references.cpp  sets.cpp  smart_pointers.cpp  string.cpp  unorderedSet.cpp  unordered_map.cpp
